[gd_scene load_steps=106 format=2]

[ext_resource path="res://src/player/PlayerScriptNew.gd" type="Script" id=1]
[ext_resource path="res://assets/player/NewNew/idle/Idle1.png" type="Texture" id=2]
[ext_resource path="res://assets/player/NewNew/idle/Idle2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/NewNew/idle/Idle3.png" type="Texture" id=4]
[ext_resource path="res://assets/player/NewNew/idle/Idle4.png" type="Texture" id=5]
[ext_resource path="res://assets/player/NewNew/idle/Idle5.png" type="Texture" id=6]
[ext_resource path="res://assets/player/NewNew/idle/Idle6.png" type="Texture" id=7]
[ext_resource path="res://assets/player/NewNew/idle/Idle7.png" type="Texture" id=8]
[ext_resource path="res://assets/player/NewNew/idle/Idle8.png" type="Texture" id=9]
[ext_resource path="res://assets/player/NewNew/idle/Idle9.png" type="Texture" id=10]
[ext_resource path="res://assets/player/NewNew/idle/Idle10.png" type="Texture" id=11]
[ext_resource path="res://assets/player/NewNew/run/NormalRun1.png" type="Texture" id=12]
[ext_resource path="res://assets/player/NewNew/run/NormalRun2.png" type="Texture" id=13]
[ext_resource path="res://assets/player/NewNew/run/NormalRun3.png" type="Texture" id=14]
[ext_resource path="res://assets/player/NewNew/run/NormalRun4.png" type="Texture" id=15]
[ext_resource path="res://assets/player/NewNew/run/NormalRun5.png" type="Texture" id=16]
[ext_resource path="res://assets/player/NewNew/run/NormalRun6.png" type="Texture" id=17]
[ext_resource path="res://assets/player/NewNew/run/NormalRun7.png" type="Texture" id=18]
[ext_resource path="res://assets/player/NewNew/run/NormalRun8.png" type="Texture" id=19]
[ext_resource path="res://assets/player/NewNew/attackstab/Stab2.png" type="Texture" id=20]
[ext_resource path="res://assets/player/NewNew/attackstab/Stab3.png" type="Texture" id=21]
[ext_resource path="res://assets/player/NewNew/attackstab/Stab4.png" type="Texture" id=22]
[ext_resource path="res://assets/player/NewNew/attackstab/Stab5.png" type="Texture" id=23]
[ext_resource path="res://assets/player/NewNew/attackstab/Stab6.png" type="Texture" id=24]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground6.png" type="Texture" id=25]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground7.png" type="Texture" id=26]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground9.png" type="Texture" id=27]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground8.png" type="Texture" id=28]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground10.png" type="Texture" id=29]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground11.png" type="Texture" id=30]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground12.png" type="Texture" id=31]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground13.png" type="Texture" id=32]
[ext_resource path="res://assets/player/NewNew/dash/Dash1.png" type="Texture" id=33]
[ext_resource path="res://assets/player/NewNew/dash/Dash2.png" type="Texture" id=34]
[ext_resource path="res://assets/player/NewNew/dash/Dash3.png" type="Texture" id=35]
[ext_resource path="res://assets/player/NewNew/dash/Dash4.png" type="Texture" id=36]
[ext_resource path="res://assets/player/NewNew/dash/Dash5.png" type="Texture" id=37]
[ext_resource path="res://assets/player/NewNew/dash/Dash6.png" type="Texture" id=38]
[ext_resource path="res://assets/player/NewNew/dash/Dash7.png" type="Texture" id=39]
[ext_resource path="res://assets/player/NewNew/dash/Dash8.png" type="Texture" id=40]
[ext_resource path="res://assets/player/NewNew/dash/Dash9.png" type="Texture" id=41]
[ext_resource path="res://assets/player/NewNew/dash/Dash10.png" type="Texture" id=42]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground2.png" type="Texture" id=43]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground3.png" type="Texture" id=44]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground4.png" type="Texture" id=45]
[ext_resource path="res://assets/player/NewNew/stabground/AttackSwords from ground5.png" type="Texture" id=46]
[ext_resource path="res://assets/player/NewNew/dash/Dash11.png" type="Texture" id=47]
[ext_resource path="res://assets/player/NewNew/dash/Dash12.png" type="Texture" id=48]
[ext_resource path="res://assets/player/NewNew/dash/Dash13.png" type="Texture" id=49]
[ext_resource path="res://assets/player/NewNew/dash/Dash14.png" type="Texture" id=50]
[ext_resource path="res://assets/player/NewNew/dash/Dash15.png" type="Texture" id=51]
[ext_resource path="res://assets/player/NewNew/dash/Dash17.png" type="Texture" id=52]
[ext_resource path="res://assets/player/NewNew/die/Death3.png" type="Texture" id=53]
[ext_resource path="res://assets/player/NewNew/die/Death4.png" type="Texture" id=54]
[ext_resource path="res://assets/player/NewNew/die/Death5.png" type="Texture" id=55]
[ext_resource path="res://assets/player/NewNew/die/Death6.png" type="Texture" id=56]
[ext_resource path="res://assets/player/NewNew/die/Death7.png" type="Texture" id=57]
[ext_resource path="res://assets/player/NewNew/die/Death8.png" type="Texture" id=58]
[ext_resource path="res://assets/player/NewNew/die/Death9.png" type="Texture" id=59]
[ext_resource path="res://assets/player/NewNew/die/Death10.png" type="Texture" id=60]
[ext_resource path="res://assets/player/NewNew/die/Death11.png" type="Texture" id=61]
[ext_resource path="res://assets/player/NewNew/die/Death12.png" type="Texture" id=62]
[ext_resource path="res://assets/player/NewNew/die/Death13.png" type="Texture" id=63]
[ext_resource path="res://assets/player/NewNew/die/Death14.png" type="Texture" id=64]
[ext_resource path="res://assets/player/NewNew/die/Death15.png" type="Texture" id=65]
[ext_resource path="res://assets/player/NewNew/die/Death16.png" type="Texture" id=66]
[ext_resource path="res://assets/player/NewNew/die/Death17.png" type="Texture" id=67]
[ext_resource path="res://assets/player/NewNew/die/Death18.png" type="Texture" id=68]
[ext_resource path="res://assets/player/NewNew/die/Death19.png" type="Texture" id=69]
[ext_resource path="res://assets/player/NewNew/die/Death20.png" type="Texture" id=70]
[ext_resource path="res://assets/player/NewNew/die/Death21.png" type="Texture" id=71]
[ext_resource path="res://assets/player/NewNew/die/Death22.png" type="Texture" id=72]
[ext_resource path="res://assets/player/NewNew/die/Death23.png" type="Texture" id=73]
[ext_resource path="res://assets/player/NewNew/die/Death24.png" type="Texture" id=74]
[ext_resource path="res://assets/player/NewNew/die/Death25.png" type="Texture" id=75]
[ext_resource path="res://assets/player/NewNew/die/Death26.png" type="Texture" id=76]
[ext_resource path="res://assets/player/NewNew/die/Death27.png" type="Texture" id=77]
[ext_resource path="res://assets/player/NewNew/die/Death28.png" type="Texture" id=78]
[ext_resource path="res://assets/player/NewNew/die/Death29.png" type="Texture" id=79]
[ext_resource path="res://assets/player/NewNew/die/Death30.png" type="Texture" id=80]
[ext_resource path="res://assets/player/NewNew/die/Death31.png" type="Texture" id=81]
[ext_resource path="res://assets/player/NewNew/die/Death32.png" type="Texture" id=82]
[ext_resource path="res://assets/player/NewNew/die/Death33.png" type="Texture" id=83]
[ext_resource path="res://assets/player/NewNew/die/Death34.png" type="Texture" id=84]
[ext_resource path="res://assets/player/NewNew/die/Death35.png" type="Texture" id=85]
[ext_resource path="res://assets/player/NewNew/die/Death36.png" type="Texture" id=86]
[ext_resource path="res://assets/player/NewNew/die/Death37.png" type="Texture" id=87]
[ext_resource path="res://assets/player/NewNew/die/Death38.png" type="Texture" id=88]
[ext_resource path="res://assets/player/NewNew/die/Death39.png" type="Texture" id=89]
[ext_resource path="res://assets/player/NewNew/die/Death40.png" type="Texture" id=90]
[ext_resource path="res://assets/player/NewNew/die/Death41.png" type="Texture" id=91]
[ext_resource path="res://assets/player/NewNew/die/Death42.png" type="Texture" id=92]
[ext_resource path="res://assets/player/NewNew/die/Death43.png" type="Texture" id=93]
[ext_resource path="res://assets/player/NewNew/die/Death44.png" type="Texture" id=94]
[ext_resource path="res://assets/player/NewNew/die/Death45.png" type="Texture" id=95]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump1.png" type="Texture" id=96]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump2.png" type="Texture" id=97]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump3.png" type="Texture" id=98]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump4.png" type="Texture" id=99]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump5.png" type="Texture" id=100]
[ext_resource path="res://assets/player/NewNew/jump/New/Jump6.png" type="Texture" id=101]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 13.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "attackstab",
"speed": 30.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "stabground-loop",
"speed": 15.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "stabground-end",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 42 ), ExtResource( 42 ) ],
"loop": false,
"name": "dash-pre",
"speed": 25.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": false,
"name": "stabground-pre",
"speed": 14.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ) ],
"loop": false,
"name": "dash-post",
"speed": 25.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.5, 3 )

[sub_resource type="Animation" id=3]
resource_name = "attack2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_activate_Attack_Hitbox"
}, {
"args": [  ],
"method": "_deactivate_Hitbox"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attackstab" ]
}

[sub_resource type="CapsuleShape2D" id=4]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.5, -50 )
frames = SubResource( 1 )
animation = "attackstab"
frame = 4

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 43.5, -2.5 )
shape = SubResource( 2 )
disabled = true

[node name="HitboxTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/attack2 = SubResource( 3 )

[node name="Side_Ray_Left" type="RayCast2D" parent="."]
position = Vector2( 1, -19 )
enabled = true
cast_to = Vector2( -11, 0 )
collision_mask = 3

[node name="Side_Ray_Right" type="RayCast2D" parent="."]
position = Vector2( 1, -19 )
enabled = true
cast_to = Vector2( 11, 0 )
collision_mask = 3

[node name="Dash_Check_Left" type="RayCast2D" parent="."]
position = Vector2( 1, -19 )
cast_to = Vector2( -250, 0 )
collision_mask = 3

[node name="Dash_Check_Right" type="RayCast2D" parent="."]
position = Vector2( 1, -19 )
cast_to = Vector2( 250, 0 )
collision_mask = 3

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.662745, 1, 0.0666667, 1 )
position = Vector2( 1, -19 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="HitboxTimer" to="." method="_on_HitboxTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
